[gd_scene load_steps=3 format=3 uid="uid://h1sw1wgnts3f"]

[ext_resource type="Script" uid="uid://cmg3m3mtklioi" path="res://scripts/menus/main_menu.gd" id="1_wlpbi"]

[sub_resource type="LabelSettings" id="LabelSettings_wlpbi"]
font_size = 32

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wlpbi")

[node name="VFlowContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -46.5
offset_right = 106.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VFlowContainer"]
layout_mode = 2
text = "Bowling merge"
label_settings = SubResource("LabelSettings_wlpbi")

[node name="StartButton" type="Button" parent="VFlowContainer"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="VFlowContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VFlowContainer/StartButton" to="." method="start_game"]
[connection signal="pressed" from="VFlowContainer/QuitButton" to="." method="quit_game"]
